<resources>
    <string name="app_name">ManajemenReportFinansialUmkm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="option_login">Create an account</string>
    <string name="login">Login</string>
    <string name="sigin_other">Or Sign In With</string>

    <string name="facebook_app_id">1172351034552307</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">VzSiQcXRmi2kyjzcA+mYLEtbGVs=</string>

    // web client key
    <string name="web_client_id">182722442913-jl0pfc1159eh0lf20l064o94qcesdtv6.apps.googleusercontent.com</string>


    // user
    <string name="hello">Hello</string>
    <string name="name_user">Alfino Hasan</string>
    <string name="total_saldo_text">Total Pemasukan</string>
    <string name="saldo">Rp 100.000.000</string>

    // box
    <string name="laporan">Laporan Keuangan</string>
    <string name="add_tranksaksi">Tambah Transaksi </string>
    <string name="history_tranksaksi">Riwayat Transaksi</string>
    <string name="product">Produk</string>

    // text bottom navigation
    <string name="home">Home</string>
    <string name="pembukuan">Pembukuan</string>
    <string name="notification">Notification</string>


    // register component text
    <string name="name_text">Full Name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="policy_text">I agree about the security</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="kategory_product_selected">
        <item>Pcs</item>
        <item>Pack</item>
        <item>Box</item>
        <item>Kg</item>
    </string-array>

    // add stock page
    <string name="add_product">Add Product</string>
    <string name="stock_in">Add Stock</string>
    <string name="text_keterangan">Keterangan</string>
    <string name="text_jumlah">Jumlah</string>
    <string name="text_nama_barang">Nama Barang</string>
    <string name="text_nama_suplier">Nama Suplier</string>
    <string name="text_code_barang">Code Barang</string>
    <string name="text_harga_beli_perbarang">Harga Beli Perbarang</string>
    <string name="text_harga_jual_perbarang">Harga Jual Perbarang</string>
    <string name="text_harga_jual">Harga Jual</string>
    <string name="text_stock_value">0</string>

    // notification page
    <string name="text_notification">Stock Yang Mau Habis</string>
    <string name="text_update_stock">Update Stock</string>

    // search query
    <string name="search_query">Search Product/barang</string>
    // product page
    <string name="text_no">No</string>
    <string name="text_product">Product</string>
    <string name="text_stock">Stock</string>
    <string name="text_action">Action</string>
    <string name="dash">-</string>

    // add detail history quantity page
    <string name="textquantity">Quantity/Jumlah Barang</string>
    <string name="btn_text">Add Pemasukan</string>
    <string name="text_harga_barang">Harga</string>

    // laporan keuangan page
    <string name="text_judul_laporan_keuangan">Finansial Report</string>
    <string name="text_pemasukan">Pemasukan</string>
    <string name="text_pengeluaran">Pengeluaran</string>
    <string name="text_laba_bersih">Laba Bersih</string>
    <string name="text_pajak"> Total Pajak </string>

    // text jika data kosong
    <string name="text_product_empty">Data Product Empty</string>
    <string name="text_notification_empty">Data Notification Empty</string>
    <string name="text_pembukuan_empty">Data Pembukuan Tidak Ada</string>
    <string name="text_trasaction_empty">Data History Transaction Empty</string>

    //item trasanction history page
    <string name="text_total_harga">Total Harga</string>
    <string name="text_pembelian">Pembelian</string>
</resources>