<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.ProductActivity">


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/search_stock"
        app:layout_constraintEnd_toEndOf="@id/search_stock"
        app:layout_constraintTop_toBottomOf="@id/search_stock"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_stock"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/container2"
        app:layout_constraintTop_toBottomOf="@+id/container2"
        app:layout_constraintEnd_toEndOf="@+id/container2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TableRow
            android:gravity="center">
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/text_no"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/text_code_barang"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_nama_barang"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/text_stock"
                android:layout_marginStart="22dp"
                android:textSize="18sp"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Action"
                android:layout_marginStart="12dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableLayout>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_add_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:backgroundTint="@color/blue_light"
        android:contentDescription="@string/stock_in"
        app:srcCompat="@drawable/baseline_add_24"
       />



    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>