<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stock.AddStockActivity">

    <TextView
        android:id="@+id/text_nama_suplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nama_suplier"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_nama_suplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_nama_suplier"
        app:layout_constraintTop_toBottomOf="@id/text_nama_suplier"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nama_suplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_nama_barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nama_barang"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_nama_suplier"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_nama_suplier" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_nama_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_nama_barang"
        app:layout_constraintTop_toBottomOf="@id/text_nama_barang"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nama_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_code_barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_code_barang"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_nama_suplier"
        app:layout_constraintTop_toBottomOf="@id/input_layout_nama_barang"
        android:layout_marginTop="12dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_code_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/input_layout_nama_barang"
        app:layout_constraintTop_toBottomOf="@id/text_code_barang"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_code_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_keterangan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_nama_suplier"
        app:layout_constraintTop_toBottomOf="@id/input_layout_code_barang"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_keterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/input_layout_nama_suplier"
        app:layout_constraintTop_toBottomOf="@id/text_keterangan"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
     >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_jumlah"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_nama_suplier"
        app:layout_constraintTop_toBottomOf="@id/input_layout_keterangan"
        android:layout_marginTop="12dp"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/input_layout_nama_suplier"
        app:layout_constraintTop_toBottomOf="@id/text_jumlah"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_tambah_stock"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/stock_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>