<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/notification_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        android:layout_marginBottom="12dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_nama_barang_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_nama_barang"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/nama_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxWidth="140dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_code_barang_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_code_barang"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/text_nama_barang_main"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/code_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxWidth="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/text_code_barang_main"
                app:layout_constraintTop_toTopOf="@id/text_code_barang_main"/>

            <TextView
                android:id="@+id/text_stock_barang_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_stock"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/text_code_barang_main"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/stock_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxWidth="140dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_stock_barang_main"
                app:layout_constraintBottom_toBottomOf="@id/text_stock_barang_main"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
