<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.notification.NotificationFragment"
    android:background="@color/pastel_light_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/bell"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_notification"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/toolbar_notification"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_notification"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp"
            />

        <ProgressBar
            android:id="@+id/progress_bar_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_notification_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_notification_empty"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_notification_empty"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:lottie_rawRes="@raw/animation_lottie"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_marginTop="18dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="@+id/text_notification_empty"
            app:layout_constraintTop_toBottomOf="@+id/text_notification_empty" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>